tests/snapshots/tui_snapshots__add_source_path_entry_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
assertion_line: 112
expression: "render(&app, 80, 24)"
---
 ◆ skilled   global                              ● ready · 0 sources registered
 1 Inventory ▌2 Sources  3 Updates (soon)  4 Doctor (soon)
┌ Repositories ───────────┐ ┌ Available variants ──────────────────────────────┐
│ No registered sources.  │ │ Select Add Source to begin.                      │
│ Press a to add one.     │ │                                                  │
│                         │ │                                                  │
│                         │ │                                                  │
│     ┌ Add source ────────────────────────────────── local Git checkout ┐     │
│     │                                                                  │     │
│     │  Enter a path inside a local Git checkout:                       │     │
│     │                                                                  │     │
│     │  > /Users/example/dev/skills                                     │     │
│     │                                                                  │     │
│     │                                                                  │     │
│     │                                                                  │     │
│     └──────────────────────────────────────────────────────────────────┘     │
│                         │ │                                                  │
│                         │ │                                                  │
│                         │ │                                                  │
│                         │ │                                                  │
│                         │ │                                                  │
│                         │ │                                                  │
└─────────────────────────┘ └──────────────────────────────────────────────────┘
 Enter Inspect   Esc Cancel   Ctrl-C Quit
