tests/snapshots/tui_snapshots__add_source_path_entry_at_wide_size.snap
---
source: tests/tui_snapshots.rs
assertion_line: 211
expression: "render(&app, 120, 40)"
---
 ◆ skilled  global                                                                       ● ready · 0 sources registered

 Add source   navigation is locked while this dialog is open

▌ Repositories  0 registered     │ Available variants  no source                │ Details  no selection
─────────────────────────────────│ ─────────────────────────────────────────────│ ─────────────────────────────────────
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                    ┌ Add source ────────────────────────────────────────────── local Git checkout ┐
                    │                                                                              │
                    │  Local Git repository                                                        │
                    │  Enter a path inside a local Git checkout:                                   │
                    │                                                                              │
                ·   │  > /Users/example/dev/skills                                                 │·
                    │                                                                              │
    No sources are r│                                                                              │ selected
                    │  ──────────────────────────────────────────────────────────────────────────  │
 Press a to register│  Read-only checkout and catalog scan             Esc Cancel   Enter Inspect  │y to see its stored
            checkout│                                                                              │ils.
                    └──────────────────────────────────────────────────────────────────────────────┘
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │
                                 │                                              │

 Enter Inspect   Esc Cancel   Ctrl-C Quit
