tests/snapshots/tui_snapshots__add_source_wrapped_inspection_error_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: rendered
---
 ◆ skilled   global                              ● ready · 0 sources registered
 Add source   navigation is locked while this dialog is open
┌▌ Repositories  0 registered──────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│ ┌ Add source ────────────────────────────────────────── local Git checkout ┐ │
│ │                                                                          │ │
│ │  Local Git repository                                                    │ │
│ │  >                                                                       │ │
│ │  [TEMP]                                                     /a-delibera  │ │
│ │  tely-long-missing-repository-directory/and-an-equally-long-nested-path  │ │
│ │                                                                          │ │
│ │  × filesystem operation failed: No such file or directory (os error 2)   │ │
│ │  ──────────────────────────────────────────────────────────────────────  │ │
│ │  Read-only checkout and catalog scan         Esc Cancel   Enter Inspect  │ │
│ │                                                                          │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Enter Inspect   Esc Cancel   Ctrl-C Quit
