tests/snapshots/tui_snapshots__catalog_confirmation_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
assertion_line: 151
expression: rendered
---
 ◆ skilled   global                              ● ready · 0 sources registered
 Confirm catalogs   navigation unlocks when this dialog closes
┌ Repositories ───────────┐ ┌ Available variants ──────────────────────────────┐
│ No registered sources.  │ │ Select Add Source to begin.                      │
│ ┌ Confirm catalogs ───────────────────────────────────── registration only ┐ │
│ │                                                                          │ │
│ │  Confirm the resolved repository, roots, and compatible agents.          │ │
│ │  Repository: [TEMP]/source                          │ │
│ │  Branch: main   HEAD: [HEAD]   ✓ clean                                 │ │
│ │                                                                          │ │
│ │  > [x] skills  Common  C:yes X:yes O:yes                                 │ │
│ │                                                                          │ │
│ │  Space include · c classification · 1/2/3 compatibility                  │ │
│ │  Enter registers metadata only · Esc cancels                             │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                         │ │                                                  │
│                         │ │                                                  │
└─────────────────────────┘ └──────────────────────────────────────────────────┘
 j/k Move   Space Include   c Class   1/2/3 Agents   Enter Register   Esc Cancel
