tests/snapshots/tui_snapshots__catalog_confirmation_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: rendered
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆ skilled  global                                                                     ● ready · 0 sources registered ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕                                                                                                                      ▏
▕ Confirm catalogs   navigation is locked while this dialog is open                                                    ▏
▕▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▏
▕▌ Repositories  0 registered    │   Available variants  no source             │   Details  no selection               ▏
▕────────────────────────────────│ ────────────────────────────────────────────│ ───────────────────────────────────── ▏
▕                                │                                             │                                       ▏
▕       ┌ Confirm catalogs ───────────────────────────────────────────────────────────────── registration only ┐       ▏
▕       │                                                                                                      │       ▏
▕       │  Repository: [TEMP]/source                                                                           │       ▏
▕       │  Branch: main   HEAD: [HEAD]                                                                         │       ▏
▕       │  Remote: not configured                                                                              │       ▏
▕       │  Worktree: ✓ clean                                                                                   │       ▏
▕       │                                                                                                      │       ▏
▕       │  ▌ Included · skills · 1 candidate                                                                   │       ▏
▕       │    Common catalog · Claude Code: yes · Codex: yes · OpenCode: yes                                    │       ▏
▕       │                                                                                                      │       ▏
▕       │                                                                                                      │       ▏
▕       │                                                                                                      │       ▏
▕    No │                                                                                                      │       ▏
▕       │                                                                                                      │       ▏
▕ Press │                                                                                                      │stored ▏
▕       │                                                                                                      │       ▏
▕       │  ──────────────────────────────────────────────────────────────────────────────────────────────────  │       ▏
▕       │  Registration records metadata only                                     Esc Cancel   Enter Register  │       ▏
▕       │                                                                                                      │       ▏
▕       └──────────────────────────────────────────────────────────────────────────────────────────────────────┘       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                │                                             │                                       ▏
▕                                                                                                                      ▏
▕ j/k Move   Space Include   c Class   1/2/3 Agents   Enter Register   Esc Cancel                                      ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
