tests/snapshots/tui_snapshots__choose_scan_roots_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "render(&app, 80, 24)"
---
 ◆ skilled   global                                         ● setup in progress
 Setup · Choose scan roots   navigation is locked during setup
  ┌ First-run setup ───────────────────────────────────── global skills only ┐
  │                                                                          │
  │  ✓━━━━━━━━━ ✓━━━━━━━━ ●━━━━━━━━ ○──────── ○──────── ○──────── ○────────  │
  │  STEP 3 / 7                                                              │
  │  Choose scan roots                                                       │
  │                                                                          │
  │  - scan roots not configured                                             │
  │                                                                          │
  │  Skilled has not scanned your home directory.                            │
  │  Continue without scanning; add a known checkout in Discover sources.    │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Setup is persisted when it finishes          Esc Back   Enter Continue  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 Enter Continue   Esc Back   ? Help   q Quit
