tests/snapshots/tui_snapshots__confirm_catalogs_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
expression: "render(&app, 80, 24)"
---
 ◆ skilled  global                                          ● setup in progress
 Setup · Confirm catalogs   navigation is locked during setup
  ┌ First-run setup ───────────────────────────────────── global skills only ┐
  │                                                                          │
  │  ✓━━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ✓━━━━━━━━ ●━━━━━━━━ ○──────── ○────────  │
  │  STEP 5 / 7                                                              │
  │  Confirm catalogs                                                        │
  │                                                                          │
  │  - no catalogs awaiting confirmation                                     │
  │                                                                          │
  │  Catalog confirmation follows inspection of a local source.              │
  │  Registration records metadata only; it does not install skills.         │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  Setup is persisted when it finishes          Esc Back   Enter Continue  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 Enter Continue   Esc Back   ? Help   q Quit
